--- a/public/doctors.html
+++ b/public/doctors.html
@@ -1009,6 +1009,8 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
 
+  <script src="https://unpkg.com/imask"></script>
+
   <script src="./scripts/scripts.js"></script>
 </body>
 
