--- a/src/implantation.html
+++ b/src/implantation.html
@@ -1018,7 +1018,7 @@
                 <div class="examples-wrapper margin">
                     <div class="row">
                         <div class="col-lg-6">
-                            <div class="example flex">
+                            <div class="example flex horizontal">
                                 <div class="example-images">
                                     <div class="before">                  
                                         <img src="./images/before.jpg" alt="before" loading="lazy">
@@ -1029,7 +1029,12 @@
                                 </div>
                                 <div class="example-text">
                                     <div class="description">
-                                        Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония 
+                                      <p class="title">
+                                        Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
+                                      </p>
+                                      <p>
+                                        Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  
+                                      </p>                                            
                                     </div>
                                     <div class="executor">                                        
                                         <a href="#" class="executor-name">
@@ -1046,7 +1051,7 @@
                         </div>
 
                         <div class="col-lg-6">
-                          <div class="example flex">
+                          <div class="example flex horizontal">
                               <div class="example-images">
                                   <div class="before">                  
                                       <img src="./images/before.jpg" alt="before" loading="lazy">
@@ -1057,8 +1062,9 @@
                               </div>
                               <div class="example-text">
                                   <div class="description">
-                                    Восстановление зубов с помощью стекловолоконных штифтов и Luxacore композита.
-                                    Установка 3 коронок из диоксида циркония в полную анатомию  
+                                    <p class="title">
+                                      Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
+                                    </p>                                   
                                   </div>
                                   <div class="executor">
                                       <a href="#" class="executor-name">
@@ -1241,6 +1247,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.7/jquery.inputmask.min.js">
   </script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+
+  <script src="https://unpkg.com/imask"></script>
 
   <script src="./scripts/scripts.js"></script>
 </body>
