--- a/public/examples.html
+++ b/public/examples.html
@@ -305,7 +305,7 @@
       <!-- наша команда -->
         <section class="examples bg-blue-light">            
             <div class="container">
-                <div class="examples-title h3">
+                <div class="h3">
                     Наши работы
                 </div>                
                 <div class="examples-wrapper">
@@ -322,20 +322,26 @@
                                 </div>
                                 <div class="example-text">
                                     <div class="description">
-                                        Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония 
+                                      <p>
+                                        Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
+                                      </p>                                         
                                     </div>
                                     <div class="executor">
-                                        <p class="executor-title">
+                                        <div class="executor-title">
+                                          <p>
                                             Стоматолог-ортопед
-                                        </p>
+                                          </p>                                            
+                                        </div>
                                         <a href="#" class="executor-name">
                                             Николаеня Александр Николаевич
                                         </a>
                                     </div>
                                     <div class="executor">
-                                        <p class="executor-title">
+                                        <div class="executor-title">
+                                          <p>
                                             Стоматолог-хирург-имплантолог
-                                        </p>
+                                          </p>                                            
+                                        </div>
                                         <a href="#" class="executor-name">
                                             Крат Максим Игоревич ​
                                         </a>
@@ -356,8 +362,10 @@
                               </div>
                               <div class="example-text">
                                   <div class="description">
-                                    Восстановление зубов с помощью стекловолоконных штифтов и Luxacore композита.
-                                    Установка 3 коронок из диоксида циркония в полную анатомию  
+                                    <p>
+                                      Восстановление зубов с помощью стекловолоконных штифтов и Luxacore композита.
+                                      Установка 3 коронок из диоксида циркония в полную анатомию 
+                                    </p>                                     
                                   </div>
                                   <div class="executor">
                                       <p class="executor-title">
@@ -391,7 +399,9 @@
                               </div>
                               <div class="example-text">
                                   <div class="description">
-                                    Восстановление утраченого зуба с помощью дентальной имплантации и
+                                    <p>
+                                      Восстановление утраченого зуба с помощью дентальной имплантации и
+                                    </p>                                    
                                   </div>
                                   <div class="executor">
                                       <p class="executor-title">
@@ -425,9 +435,11 @@
                               </div>
                               <div class="example-text">
                                   <div class="description">
-                                    Восстановление утраченого зуба с помощью дентальной имплантации и коронки из
-                                    диоксида циркония помощью дентальной имплантации и коронки из  диоксида циркония 
-                                    диоксида циркония помощью дентальной имплантации и коронки из  диоксида циркония 
+                                    <p>
+                                       Восстановление утраченого зуба с помощью дентальной имплантации и коронки из
+                                      диоксида циркония помощью дентальной имплантации и коронки из  диоксида циркония 
+                                      диоксида циркония помощью дентальной имплантации и коронки из  диоксида циркония 
+                                    </p>                                   
                                   </div>
                                   <div class="executor">
                                       <p class="executor-title">
@@ -463,7 +475,9 @@
                               </div>
                               <div class="example-text">
                                   <div class="description">
-                                      Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония 
+                                    <p>
+                                      Восстановление утраченого зуба с помощью дентальной имплантации и коронки из  диоксида циркония
+                                    </p>                                       
                                   </div>
                                   <div class="executor">
                                       <p class="executor-title">
@@ -497,8 +511,10 @@
                             </div>
                             <div class="example-text">
                                 <div class="description">
-                                  Восстановление зубов с помощью стекловолоконных штифтов и Luxacore композита.
-                                  Установка 3 коронок из диоксида циркония в полную анатомию  
+                                  <p>
+                                    Восстановление зубов с помощью стекловолоконных штифтов и Luxacore композита.
+                                  Установка 3 коронок из диоксида циркония в полную анатомию 
+                                  </p>                                   
                                 </div>
                                 <div class="executor">
                                     <p class="executor-title">
@@ -532,7 +548,9 @@
                             </div>
                             <div class="example-text">
                                 <div class="description">
-                                  Восстановление утраченого зуба с помощью дентальной имплантации и
+                                  <p>
+                                     Восстановление утраченого зуба с помощью дентальной имплантации и
+                                  </p>                                 
                                 </div>
                                 <div class="executor">
                                     <p class="executor-title">
@@ -566,9 +584,11 @@
                             </div>
                             <div class="example-text">
                                 <div class="description">
-                                  Восстановление утраченого зуба с помощью дентальной имплантации и коронки из
-                                  диоксида циркония помощью дентальной имплантации и коронки из  диоксида циркония 
-                                  диоксида циркония помощью дентальной имплантации и коронки из  диоксида циркония 
+                                  <p>
+                                    Восстановление утраченого зуба с помощью дентальной имплантации и коронки из
+                                    диоксида циркония помощью дентальной имплантации и коронки из  диоксида циркония 
+                                    диоксида циркония помощью дентальной имплантации и коронки из  диоксида циркония 
+                                  </p>                                  
                                 </div>
                                 <div class="executor">
                                     <p class="executor-title">
@@ -618,15 +638,17 @@
       <!-- отзывы -->
       <section class="reviews bg-blue">
         <div class="container">
-          <div class="work-title h3">
-            Отзывы
+          <div class="work-title">
+            <div class="h3">
+              Отзывы
+            </div>            
           </div>
           <div class="reviews-slider slider-four">
             <div class="swiper-wrapper">
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Наталия Владимировна Дуровская">
+                  <div class="h4">
                     Юля Тихончук                   
                   </div>
                   <div class="reviews-head-rating five">
@@ -648,20 +670,22 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                   приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                  <p>
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                    приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
                     вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                     Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
-                     Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                     приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
-                      вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                       Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!   
+                    Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                    приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                    вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
+                    Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                  </p>                     
                 </div>
               </div>
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Наталья">
+                  <div class="h4">
                     Наталья
                   </div>
                   <div class="reviews-head-rating four">
@@ -683,13 +707,15 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Хочется выразить благодарность Пренз Юлии Викторовне. Была на приеме впервые. Получила максимум внимания, спокойствия!
+                  <p>
+                    Хочется выразить благодарность Пренз Юлии Викторовне. Была на приеме впервые. Получила максимум внимания, спокойствия!
+                  </p>                  
                 </div>
               </div>
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Татьяна Тихончук">
+                  <div class="h4">
                     Татьяна Тихончук
                   </div>
                   <div class="reviews-head-rating three">
@@ -711,15 +737,17 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Отличная стоматология, где чувствуешь себя комфортно и спокойно.
-                   Нравится все: уютная обстановка, приветливые и отзывчивые администраторы,
-                    классные врачи, и то что можно получить ответы на все интересующие вопросы. 
+                  <p>
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно.
+                    Нравится все: уютная обстановка, приветливые и отзывчивые администраторы,
+                    классные врачи, и то что можно получить ответы на все интересующие вопросы.
+                  </p>                   
                 </div>
               </div>
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Юля Тихончук">
+                  <div class="h4">
                     Юля Тихончук
                   </div>
                   <div class="reviews-head-rating two">
@@ -741,16 +769,18 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                   приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                  <p>
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                    приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
                     вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                     Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                    Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                  </p>                  
                 </div>
               </div>
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Елизавета Тихончуковская">
+                  <div class="h4">
                     Елизавета Тихончуковская
                   </div>
                   <div class="reviews-head-rating one">
@@ -772,10 +802,12 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                   приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                  <p>
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                    приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
                     вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                     Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                    Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                  </p>                  
                 </div>
               </div>
 
