--- a/public/prices.html
+++ b/public/prices.html
@@ -623,7 +623,7 @@
 
         <section class="methods bg-blue">
           <div class="container">
-            <div class="methods-title h3">
+            <div class="h3">
               способы оплаты
             </div>
             <div class="methods-items">
