--- a/src/index.html
+++ b/src/index.html
@@ -1285,15 +1285,17 @@
       <!-- отзывы -->
       <section class="reviews bg-blue">
         <div class="container">
-          <div class="work-title h3">
-            Отзывы
+          <div class="work-title">
+            <div class="h3">
+              Отзывы
+            </div>            
           </div>
           <div class="reviews-slider slider-four">
             <div class="swiper-wrapper">
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Наталия Владимировна Дуровская">
+                  <div class="h4">
                     Юля Тихончук                   
                   </div>
                   <div class="reviews-head-rating five">
@@ -1315,20 +1317,22 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                   приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                  <p>
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                    приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
                     вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                     Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
-                     Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                     приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
-                      вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                       Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!   
+                    Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                    приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                    вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
+                    Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                  </p>                 
                 </div>
               </div>
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Наталья">
+                  <div class="h4">
                     Наталья
                   </div>
                   <div class="reviews-head-rating four">
@@ -1350,13 +1354,15 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Хочется выразить благодарность Пренз Юлии Викторовне. Была на приеме впервые. Получила максимум внимания, спокойствия!
+                  <p>
+                    Хочется выразить благодарность Пренз Юлии Викторовне. Была на приеме впервые. Получила максимум внимания, спокойствия!
+                  </p>                  
                 </div>
               </div>
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Татьяна Тихончук">
+                  <div class="h4">
                     Татьяна Тихончук
                   </div>
                   <div class="reviews-head-rating four">
@@ -1378,15 +1384,17 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Отличная стоматология, где чувствуешь себя комфортно и спокойно.
-                   Нравится все: уютная обстановка, приветливые и отзывчивые администраторы,
+                  <p>
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно.
+                    Нравится все: уютная обстановка, приветливые и отзывчивые администраторы,
                     классные врачи, и то что можно получить ответы на все интересующие вопросы. 
+                  </p>               
                 </div>
               </div>
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Юля Тихончук">
+                  <div class="h4">
                     Юля Тихончук
                   </div>
                   <div class="reviews-head-rating two">
@@ -1408,16 +1416,18 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                   приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                  <p>
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                    приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
                     вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                     Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                    Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                  </p>                  
                 </div>
               </div>
 
               <div class="swiper-slide reviews-slide">
                 <div class="reviews-head">
-                  <div class="reviews-head-name" title="Елизавета Тихончуковская">
+                  <div class="h4">
                     Елизавета Тихончуковская
                   </div>
                   <div class="reviews-head-rating one">
@@ -1439,10 +1449,12 @@
                   </div>
                 </div>
                 <div class="reviews-main">
-                  Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                   приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                  <p>
+                    Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                    приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
                     вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                     Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                    Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                  </p>                 
                 </div>
               </div>
 
